--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -4,10 +4,10 @@ body {
     font-family: 'Poppins', sans-serif;
     max-width: 1280px;
     margin: 0 auto;
-    background-image: url('../imagens/fundopokemon.jpg');
-    background-repeat: no-repeat;
-    background-size: 100%;
+    background: url('../imagens/fundopokemon.jpg') no-repeat;
+    background-size: contain;
     color: rgba(0, 0, 0,.8);
+    background-color: rgb(150, 228, 105);
 }
 
 body.modo-escuro{
@@ -151,4 +151,8 @@ main .descricao {
     overflow-x: hidden;
     font-size: 14px;
     padding-right: 10px;
+}
+
+footer{
+    text-align: center;
 }
